# esp32_rm_folder

./: sdkconfig  sdkconfig.old
components/sqlite3/: CMakeLists.txt  chacha20poly1305.c  codec.c  component.mk  config_ext.h  fastpbkdf2.c  sqlite3secure.c
components/sqlite3/include/: sqlite3.h
components/sqlite3/private_include/: osapi.h
main/: CMakeLists.txt  encrypt_aes256_dec.c  encrypt_aes256_dec.h  rm.cpp  rm.h  sd_card_example_main.c  sqlite_test.c  sqlite_test.h
